# khiopsdriver-azure

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  localtest.runsettings  vcpkg.json
.github/workflows/: hosted-ninja-vcpkg_submod.yml  hosted-pure-workflow.yml
khiops_data/bq_export/Adult/: Adult-split-000000000000.txt  Adult-split-000000000001.txt  Adult-split-000000000003.txt  Adult-split-000000000004.txt  Adult-split-000000000005.txt  Adult-split-000000000006.txt  Adult-split-000000000007.txt  Adult-split-000000000008.txt
khiops_data/bq_export/Adult_empty/: Adult-split-000000000002.txt  Adult-split-000000000003.txt
khiops_data/samples/: README.md
khiops_data/samples/Adult/: Adult.kdic
khiops_data/split/Adult/: Adult-split-03.txt  Adult-split-05.txt
khiops_data/split/Adult_subsplit/: Adult-split-00.txt  Adult-split-01.txt  Adult-split-02.txt
khiops_data/split/Adult_subsplit/subsplit/: Adult-split-04.txt
scripts/: install_azurecli.ps1
src/: azureplugin.cpp  azureplugin.h  azureplugin.hpp  azureplugin_internal.h  blobaccessor.cpp  blobaccessor.h  blobaccessor.hpp  blobappender.cpp  blobappender.hpp  blobfileinfo.cpp  blobfileinfo.hpp  blobpathresolve.cpp  blobpathresolve.hpp  blobreader.cpp  blobreader.hpp  blobwriter.cpp  blobwriter.hpp  cloudblobaccessor.cpp  cloudblobaccessor.hpp  cloudfileaccessor.cpp  cloudfileaccessor.hpp  cloudshareaccessor.cpp  cloudshareaccessor.hpp  contrib.cpp  contrib.hpp  driver.cpp  driver.h  driver.hpp  drivertest.cpp  emulatedblobaccessor.cpp  emulatedblobaccessor.hpp  emulatedfileaccessor.cpp  emulatedfileaccessor.hpp  errorlogger.cpp  errorlogger.hpp  exception.cpp  exception.h  exception.hpp  fileaccessor.cpp  fileaccessor.h  (+40 more)
src/contrib/: globmatch.cpp  globmatch.hpp  matching.hpp
src/util/: connstring.cpp  connstring.hpp  env.cpp  env.h  env.hpp  glob.cpp  glob.hpp  macro.h  map.cpp  map.hpp  random.cpp  random.hpp  string.cpp  string.h  string.hpp  urlresolve.cpp  urlresolve.hpp
test/: CMakeLists.txt  basic_test.cpp  basic_test.h  drivertest.cpp  io_test.cpp  path_helper.cpp  plugin_test.cpp  storagetype.cpp  storagetype.hpp  test_uri.h  test_uri.hpp  uri_provider.cpp  uri_provider.hpp  urls.cpp  urls.hpp
test/fixtures/: storage_test.cpp  storage_test.hpp
test/internal/: CMakeLists.txt  connstring_test.cpp
